fix(global): CI 테스트 실패와 배포 병목 수정